--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dosmono-lib-jitsi-meet",
-  "version": "1.0.1",
+  "name": "lib-jitsi-meet",
+  "version": "1.0.2",
   "description": "JS library for accessing Jitsi server side deployments",
   "repository": {
     "type": "git",
